--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,22 @@
-<p>home-page works!</p>
+<div id="homePageContainer">
+
+  <div id="greeting">Welcome to
+
+    <span id="logo" routerLink="">
+
+      <mat-icon id="icon">
+
+        call_split
+
+      </mat-icon>
+
+      MoqTest
+
+    </span>
+
+  </div>
+
+</div>
+
+
+
