--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<app-header>
+
+</app-header>
+
+<router-outlet id="bodyWrapper">
+
+</router-outlet>
