--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,29 +1,35 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand">
-        <img src="assets/img/ngx-bootstrap.svg" class="logo">
-      </a>
-      <span class="navbar-brand">Angular + Bootstrap</span>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">
-        Link <span class="sr-only">(current)</span>
-      </a></li>
-      <li><a href="#">Link</a></li>
-      <li class="dropdown" dropdown> <!-- {1} -->
-        <a dropdownToggle role="button"> <!-- {2} -->
-          Dropdown <span class="caret"></span></a>
-        <ul *dropdownMenu class="dropdown-menu"> <!-- {3} -->
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li role="separator" class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-          <li role="separator" class="divider"></li>
-          <li><a href="#">One more separated link</a></li>
-        </ul>
-      </li>
-    </ul>
+<mat-toolbar color="primary">
+
+  <a id="logo" mat-button routerLink="">
+
+    <mat-icon id="icon">
+
+      call_split
+
+    </mat-icon>
+
+    MoqTest
+
+  </a>
+
+  <a class="button" mat-button routerLink="createTests">
+
+    Create tests
+
+  </a>
+
+  <a class="button" mat-button routerLink="viewTests">
+
+    View your tests
+
+  </a>
+
+  <div class="spacer">
+
   </div>
-</nav>
+
+  <app-sign-in-out>
+
+  </app-sign-in-out>
+
+</mat-toolbar>
