--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
 <h1> New questionnaire </h1>
 
-<!-- <button (click)="getQuestionnaires()">get</button>
 
-<div *ngFor="let q of questionnaires | async">
-  {{ q | json }}
-</div> -->
 
 <div class="row">
   <div class="col-6">
@@ -88,5 +84,12 @@
       
     </div>
   </div>
-
 </form>
+
+<br/>
+
+<!-- <button (click)="getAllQuestionnaires()">get</button>
+
+<div *ngFor="let q of questionnaires | async">
+  {{ q | json }}
+</div> -->
