--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <h1> New questionnaire </h1>
 
-
-
 <div class="row">
   <div class="col-6">
       <h2>Questionnaire Name</h2>
@@ -15,10 +13,8 @@
 <form #addressForm="ngForm" class="container mt-3" (ngSubmit)="logValue()">
   <div class="row justify-content-center">
     <div class="col-6">
-
-      
-        
-      <section class="container border mb-4 p-3" *ngFor="let question of questions; let i = index;">
+  
+      <section class="container border mb-4 p-3" *ngFor="let question of rawQuestions; let i = index;">
         <div class="row">
           <div class="col-6">
               <h4>Question {{i + 1}}</h4>
@@ -28,36 +24,10 @@
         <div class="row">
           <div class="col-6">
               <div class="form-group">
-                  <!-- <label>Question</label> -->
                   <input type="text" class="form-control" [(ngModel)]="question.content" name="content_{{question.id}}" placeholder=""/>
                 </div>
           </div>
-          <!-- <div class="col-6">
-              <div class="form-group">
-                  <label>Street</label>
-                  <input type="text" class="form-control" [(ngModel)]="address.street" name="street_{{address.id}}" placeholder="South Street"/>
-                </div>
-          </div> -->
         </div>
-        
-        <!-- <div class="row">
-          <div class="col-6">
-              <div class="form-group">
-                  <label>City</label>
-                  <input type="text" class="form-control" [(ngModel)]="address.city" name="city_{{address.id}}" placeholder="Mumbai"/>
-                </div>
-          </div>
-          <div class="col-6">
-              <div class="form-group">
-                  <label>Country</label>
-                  <select class="form-control" [(ngModel)]="address.country" name="country_{{address.id}}" placeholder="India">
-                    <option value="india">India</option>
-                    <option value="usa">USA</option>
-                    <option value="england">England</option>
-                  </select>
-                </div>
-          </div>
-        </div> -->
       </section>
 
       <br/>
@@ -85,11 +55,3 @@
     </div>
   </div>
 </form>
-
-<br/>
-
-<!-- <button (click)="getAllQuestionnaires()">get</button>
-
-<div *ngFor="let q of questionnaires | async">
-  {{ q | json }}
-</div> -->
