--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,7 +1,7 @@
 #homePageContainer {
 
   display: flex;
-  height: 91.7vh;
+  height: 94%;
   align-items: center;
   justify-content: space-around;
 
