--- a/src/app/screen-recording/screen-recording.component.html
+++ b/src/app/screen-recording/screen-recording.component.html
@@ -1,1 +1,1 @@
-<button id= "finishRecBtn">Finish recording</button>
+<button id="finishRecBtn" (click) = "finishRecording()">Finish recording</button>
