--- a/src/app/components/create-tests/create-tests.component.html
+++ b/src/app/components/create-tests/create-tests.component.html
@@ -22,6 +22,12 @@
 
       <a mat-flat-button color="accent" id="saveTest"> Save this test </a>
 
+      <a mat-flat-button color="accent" id="createQuestionnaire" routerLink="/createQuestionnaire" > 
+        Create a questionnaire 
+      </a>
+
+      <a mat-flat-button color="accent" id="createTest"> Create a test </a>
+
     </div>
 
     <div id="websiteContainer">
