integrate screen recording component with router

--- a/src/app/components/create-tests/create-tests.component.css
+++ b/src/app/components/create-tests/create-tests.component.css
@@ -17,6 +17,15 @@
 
 }
 
+#rightSide {
+
+  display: flex;
+  flex-direction:column;
+  flex: 7;
+  justify-content: space-between;
+
+}
+
 
 #sidebar {
 
