--- a/src/app/components/create-tests/create-tests.component.html
+++ b/src/app/components/create-tests/create-tests.component.html
@@ -28,6 +28,10 @@
 
       <a mat-flat-button color="accent" id="createTest"> Create a test </a>
 
+      <a mat-flat-button color="accent" id="startScreenRecording" routerLink="/screenRecording"> 
+        Start screen recording 
+      </a>
+
     </div>
 
     <div id="websiteContainer">
@@ -37,6 +41,7 @@
     </div>
 
   </div>
+
 
   <div id="sidebar">
 
