--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,38 +1,42 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="up">
 
-    <a id="logo" mat-button routerLink="home">
-  
-      <mat-icon id="icon">
-  
-        call_split
-  
-      </mat-icon>
-  
-      MoqTest
-  
+    <a id="logo" mat-button>
+
+        <mat-icon id="icon">
+
+            call_split
+
+        </mat-icon>
+
+        MoqTest
+
     </a>
-  
-    <a class="button" mat-button routerLink="createTests">
-  
-      Create tests
-  
-    </a>
-  
-    <a class="button" mat-button routerLink="viewTests">
-  
-      View your tests
-  
-    </a>
-  
+
+
     <div class="spacer">
-  
+
     </div>
-  
-    <app-sign-in-out>
-  
-    </app-sign-in-out>
-  
-  </mat-toolbar>
-  
-  
-  
+</mat-toolbar>
+<mat-card class="mat-card">
+    <mat-card-header class="text">Login</mat-card-header>
+   
+        <mat-card-content class="content-position position">
+            
+            <mat-form-field class="position">
+                <mat-label>You are</mat-label>
+                <mat-select [(ngModel)]="roleSelected">
+                    <mat-option *ngFor="let role of roles" [value]="role">
+                        {{role}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <br>
+            <app-sign-in-out class="position"></app-sign-in-out>
+            <mat-label *ngIf="user">Logged as : {{user.firstName}} {{user.lastName}}</mat-label>
+            <br>
+            <button class="submit-btn position" color="primary" mat-raised-button type="submit" (click) = "login()" [disabled] = "!roleSelected || !user"
+             >Login</button>
+
+            
+    </mat-card-content>
+</mat-card>
