Probably repaired frontend CI. Refactored frontend a little bit - separated module for Material.

--- a/src/app/components/create-questionnaire/create-questionnaire.component.html
+++ b/src/app/components/create-questionnaire/create-questionnaire.component.html
@@ -9,7 +9,7 @@
 
 </mat-form-field>
 
-<form id="questionsForm" #addressForm="ngForm" class="container mt-3" (ngSubmit)="logValue()">    
+<form id="questionsForm" class="container mt-3" (ngSubmit)="logValue()">    
 
   <section *ngFor="let question of rawQuestions; let i = index;">
     
