--- a/src/app/components/view-results-of-test/view-results-of-test.component.html
+++ b/src/app/components/view-results-of-test/view-results-of-test.component.html
@@ -8,3 +8,19 @@
   <a id="getButton" mat-flat-button color="primary" (click)="getResults()"> Get Results </a>
 
 </div>
+<div id="results-view">
+  <table>
+    <thead>
+    <tr>
+      <th *ngFor="let curResult of processedResults" scope="col">{{curResult[0]}} </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let curResult of processedResults">
+      <td *ngFor="let subject of curResult[1]">
+        {{subject[0]}} (<b>{{subject[1]}}</b>)
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
