--- a/src/app/components/doTest/do-test.component.html
+++ b/src/app/components/doTest/do-test.component.html
@@ -13,3 +13,26 @@
 <p>
   <button id="nextTaskButton" (click)="nextTask()">Next task</button>
 </p>
+
+<div id="toolbar">
+  <div id="import">
+
+    <mat-form-field appearance="standard" [style.fontSize.px]=18>
+
+      <label>
+
+        <input matInput type="url" [(ngModel)]="modelMessage" id="urlInput"/>
+
+      </label>
+
+    </mat-form-field>
+
+    <a mat-flat-button color="primary" (click)="embedWebsite()"> Import a mockup </a>
+
+  </div>
+
+  <div id="websiteContainer">
+    <iframe id="websiteIframe"></iframe>
+
+  </div>
+</div>
