--- a/src/app/components/doTest/do-test.component.html
+++ b/src/app/components/doTest/do-test.component.html
@@ -14,6 +14,10 @@
   <button id="nextTaskButton" (click)="nextTask()">Next task</button>
 </p>
 
+<p>
+  <button id="finishRecBtn" (click) = "finishRecording()">Finish recording</button>
+</p>>
+
 <div id="toolbar">
   <div id="import">
 
