--- a/src/app/components/create-tests/create-tests.component.css
+++ b/src/app/components/create-tests/create-tests.component.css
@@ -1,12 +1,15 @@
 #bodyWrapper {
 
-  height: 94%;
+  height: 93.9%;
   display: flex;
   flex-direction:row;
   justify-content: space-between;
+  /*position: absolute;*/
+  /*bottom: 0;*/
+  /*padding-bottom: 0px;*/
+  overflow: hidden
 
 }
-
 
 #leftSide {
 
@@ -19,17 +22,63 @@
 
 #rightSide {
 
+  flex: 3;
+  margin: 0.5%;
+  margin-left: 1%;
+
+}
+
+#tabGroup {
+  height: 100%;
+}
+
+#task {
+
   display: flex;
-  flex-direction:column;
-  flex: 7;
+  flex-direction: row;
   justify-content: space-between;
 
 }
 
+#taskText {
+  flex: 4;
 
-#sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  flex: 3;
+#removeTaskWrapper {
+
+  flex: 1;
+  text-align: center;
+  /*border-style: solid;*/
+  /*border-width: 5px;*/
+  position: relative;
+
+}
+
+#removeTaskButton {
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+
+#inputName {
+
+  margin-bottom: -7%;
+  flex: 1;
+
+}
+
+#inputDescription {
+
+  /*margin-bottom: -2%;*/
+  flex: 1;
 
 }
 
@@ -47,13 +96,44 @@
 
 
 #import {
+  flex: 10;
 
 }
 
+#buttonUrl {
+
+}
+
+#inputUrl {
+
+  width: 40%;
+  margin-right: 1%;
+
+}
+
+#addTaskButton {
+
+  margin-left: 2%;
+  margin-bottom: 2%;
+
+}
+
+#testTitle {
+
+  flex: 3;
+
+}
+
+#saveTestWrapper {
+
+  flex: 2;
+  text-align: right;
+
+}
 
 #saveTest {
 
-  right: 0;
+  text-align: right;
 
 }
 
@@ -71,11 +151,12 @@
 
   border: none;
   padding: 0;
-  -webkit-transform:scale(0.9);
+  -webkit-transform:scale(1);
   -webkit-transform-origin: top left;
   margin: 0 0 0 -4%;
   background-color: #EEEEEE;
-  width: 115.5%;
-  height: 111.2%;
-
+  width: 104%;
+  /*height: 111.2%;*/
+  /*height: 110%;*/
+  height: 100%;
 }
