--- a/src/app/components/create-questionnaire/create-questionnaire.component.css
+++ b/src/app/components/create-questionnaire/create-questionnaire.component.css
@@ -1,23 +1,56 @@
-#inputField {
+.inputField {
 
     margin-top: 5px;
     margin-bottom: 5px;
     margin-right: 20px;
     margin-left: 20px;
-    
+
 }
 
-#input {
+.input {
 
     margin-top: 2px;
     margin-bottom: 2px;
-    
+
 }
 
-#option {
+.option {
 
     margin-left: 140px;
-    
+
+}
+
+#question {
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+.questionText {
+  /*border-style: solid;*/
+  /*border-width: 5px;*/
+  flex: 6;
+}
+
+#removeQuestionWrapper {
+
+  flex: 1;
+  text-align: center;
+  /*border-style: solid;*/
+  /*border-width: 5px;*/
+  position: relative;
+
+}
+
+#removeQuestionButton {
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
 }
 
 #questionNo {
@@ -26,7 +59,7 @@
     margin-bottom: 10px;
     margin-right: 20px;
     margin-left: 20px;
-      
+
 }
 
 #questionnaireName {
@@ -46,10 +79,7 @@
     margin-left: 20px;
 }
 
-#button {
+.button {
 
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-right: 5px;
-    margin-left: 5px;
+  margin: 5px;
 }
