--- a/src/app/components/create-questionnaire/create-questionnaire.component.html
+++ b/src/app/components/create-questionnaire/create-questionnaire.component.html
@@ -3,106 +3,119 @@
 
 
 
-<mat-form-field id="questionnaireName" appearance="standard" [style.fontSize.px]=18>
+<!--<mat-form-field id="questionnaireName" appearance="standard" [style.fontSize.px]=18>-->
 
-    <input matInput type="text" [(ngModel)]="questionnaireName"  placeholder="Questionnaire name"/>
+<!--    <input matInput type="text" [(ngModel)]="questionnaireName"  placeholder="Questionnaire name"/>-->
 
-</mat-form-field>
+<!--</mat-form-field>-->
 
 <section *ngFor="let rawQuestion of rawQuestions; let i = index;">
-    
-  <label id="questionNo">Question {{i + 1}}</label>
 
-  <div style="display: inline" *ngIf="rawQuestion.type === 'text'">
-  
-    <mat-form-field id="inputField" appearance="standard" [style.fontSize.px]=14>
+<!--  <label id="questionNo">Question {{i + 1}}</label>-->
 
-      <input matInput type="text" [(ngModel)]="rawQuestion.question.content" placeholder="content"/>
+  <div id="question">
 
-    </mat-form-field>
 
-  </div>
+    <div class="questionText" style="display: inline" *ngIf="rawQuestion.type === 'text'">
 
-  <div style="display: inline" *ngIf="rawQuestion.type === 'likert'">
-  
-    <mat-form-field id="inputField" appearance="standard" [style.fontSize.px]=14>
-      <input matInput type="text" [(ngModel)]="rawQuestion.question.content" placeholder="content" id="input"/>
-      
-    </mat-form-field>
+      <mat-form-field class="inputField" appearance="standard" [style.fontSize.px]=14>
 
-    <mat-form-field id="inputField" appearance="standard" [style.fontSize.px]=14>
+        <input matInput type="text" [(ngModel)]="rawQuestion.question.content" placeholder="Question"/>
 
-      <input matInput type="number" [(ngModel)]="rawQuestion.question.possibleStepsNo" placeholder="number of possible steps" id="input"/>
-      
-    </mat-form-field>
-
-  </div>
-
-  <div style="display: inline" *ngIf="rawQuestion.type === 'multipleChoice'">
-
-    <mat-form-field  id="inputField" appearance="standard" [style.fontSize.px]=14>
-
-      <input matInput type="text" [(ngModel)]="rawQuestion.question.content" placeholder="content" id="input"/>
-
-    </mat-form-field>
-      
-    <section *ngFor="let option of rawQuestion.question.options">
-  
-      <mat-form-field  id="option" appearance="standard" [style.fontSize.px]=11>
-
-        <input matInput type="text" [(ngModel)]="option.content" placeholder="option"/>
-  
       </mat-form-field>
 
-    </section> 
+    </div>
 
-    <a id="button" mat-flat-button color="primary" (click)="addOptionToMultipleChoiceQuestion(i)"> Add Option </a>
+    <div class="questionText" style="display: inline" *ngIf="rawQuestion.type === 'likert'">
 
-    <a id="button" mat-flat-button color="primary" (click)="removeOptionFromMultipleChoiceQuestion(i)"> Remove Option </a>
+      <mat-form-field class="inputField" appearance="standard" [style.fontSize.px]=14>
+        <input matInput type="text" [(ngModel)]="rawQuestion.question.content" placeholder="Question" class="input"/>
 
-  </div>
-
-  <div style="display: inline" *ngIf="rawQuestion.type === 'multipleAnswer'">
-
-
-    <mat-form-field  id="inputField" appearance="standard" [style.fontSize.px]=14>
-
-      <input matInput type="text" [(ngModel)]="rawQuestion.question.content" placeholder="content" id="input"/>
-
-    </mat-form-field>
-      
-    <section *ngFor="let option of rawQuestion.question.options">
-  
-      <mat-form-field  id="option" appearance="standard" [style.fontSize.px]=11>
-
-        <input matInput type="text" [(ngModel)]="option.content" placeholder="option"/>
-  
       </mat-form-field>
 
-    </section> 
+      <mat-form-field class="inputField" appearance="standard" [style.fontSize.px]=14>
 
-    <a id="button" mat-flat-button color="primary" (click)="addOptionToMultipleAnswerQuestion(i)"> Add Option </a>
+        <input matInput type="number" [(ngModel)]="rawQuestion.question.possibleStepsNo" placeholder="Number of possible steps" class="input"/>
 
-    <a id="button" mat-flat-button color="primary" (click)="removeOptionFromMultipleAnswerQuestion(i)"> Remove Option </a>
+      </mat-form-field>
 
+    </div>
+
+    <div class="questionText" style="display: inline" *ngIf="rawQuestion.type === 'multipleChoice'">
+
+      <mat-form-field  class="inputField" appearance="standard" [style.fontSize.px]=14>
+
+        <input matInput type="text" [(ngModel)]="rawQuestion.question.content" placeholder="Question" class="input"/>
+
+      </mat-form-field>
+
+      <section *ngFor="let option of rawQuestion.question.options">
+
+        <mat-form-field  class="option" appearance="standard" [style.fontSize.px]=12>
+
+          <input matInput type="text" [(ngModel)]="option.content" placeholder="option"/>
+
+        </mat-form-field>
+
+      </section>
+
+      <a class="button" mat-flat-button color="primary" (click)="addOptionToMultipleChoiceQuestion(i)"> Add an Option </a>
+
+      <a class="button" mat-flat-button color="primary" (click)="removeOptionFromMultipleChoiceQuestion(i)"> Remove an Option </a>
+
+    </div>
+
+    <div class="questionText" style="display: inline" *ngIf="rawQuestion.type === 'multipleAnswer'">
+
+
+      <mat-form-field  class="inputField" appearance="standard" [style.fontSize.px]=14>
+
+        <input matInput type="text" [(ngModel)]="rawQuestion.question.content" placeholder="Question" class="input"/>
+
+      </mat-form-field>
+
+      <section *ngFor="let option of rawQuestion.question.options">
+
+        <mat-form-field  class="option" appearance="standard" [style.fontSize.px]=12>
+
+          <input matInput type="text" [(ngModel)]="option.content" placeholder="Option"/>
+
+        </mat-form-field>
+
+      </section>
+
+      <a class="button" mat-flat-button color="primary" (click)="addOptionToMultipleAnswerQuestion(i)"> Add an Option </a>
+
+      <a class="button" mat-flat-button color="primary" (click)="removeOptionFromMultipleAnswerQuestion(i)"> Remove an Option </a>
+
+    </div>
+
+    <div id="removeQuestionWrapper">
+      <a id="removeQuestionButton" mat-mini-fab color="warn" (click)="removeQuestion(i)">
+        <mat-icon>clear</mat-icon>
+      </a>
+    </div>
   </div>
+
+
+  <mat-divider *ngIf="i != rawQuestions.length - 1"></mat-divider>
 
 </section>
 
 
 <br/>
 
-<a id="button" mat-flat-button color="primary" (click)="addTextQuestion()"> Add Text Question </a>
+<a class="button" mat-flat-button color="primary" (click)="addTextQuestion()"> Add a Text Question </a>
 
-<a id="button" mat-flat-button color="primary" (click)="addLikertScaleQuestion()"> Add Likert Scale Question </a>
+<a class="button" mat-flat-button color="primary" (click)="addLikertScaleQuestion()"> Add a Likert Scale Question </a>
 
-<a id="button" mat-flat-button color="primary" (click)="addMultipleChoiceQuestion()"> Add Multiple Choice Question </a>
+<a class="button" mat-flat-button color="primary" (click)="addMultipleChoiceQuestion()"> Add a Multiple Choice Question </a>
 
-<a id="button" mat-flat-button color="primary" (click)="addMultipleAnswerQuestion()"> Add Multiple Answer Question </a>
+<a class="button" mat-flat-button color="primary" (click)="addMultipleAnswerQuestion()"> Add a Multiple Answer Question </a>
 
-<a id="button" mat-flat-button color="primary" (click)="removeRecentlyAddedQuestion()"> Remove Question </a>
+<!--<a class="button" mat-flat-button color="primary" (click)="removeRecentlyAddedQuestion()"> Remove Question </a>-->
 
-<br/>
+<!--<br/>-->
 
-<a id="button" mat-flat-button color="accent" (click)="submitQuestionnaire()"> Submit Questionnaire </a>
+<!--<a class="button" mat-flat-button color="accent" (click)="submitQuestionnaire()"> Submit Questionnaire </a>-->
 
