--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
 
-  <a id="logo" mat-button routerLink="">
+  <a id="logo" mat-button routerLink="home">
 
     <mat-icon id="icon">
 
