--- a/src/app/components/create-tests/create-tests.component.css
+++ b/src/app/components/create-tests/create-tests.component.css
@@ -1,6 +1,6 @@
 #bodyWrapper {
 
-  height: 93.9%;
+  height: 93.5%;
   display: flex;
   flex-direction:row;
   justify-content: space-between;
@@ -23,13 +23,17 @@
 #rightSide {
 
   flex: 3;
-  margin: 0.5%;
+  margin-top: 0.7%;
   margin-left: 1%;
 
 }
 
+.tab {
+
+}
+
 #tabGroup {
-  height: 100%;
+
 }
 
 #task {
@@ -64,6 +68,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  box-shadow: none !important;
 
 }
 
@@ -113,8 +118,8 @@
 
 #addTaskButton {
 
-  margin-left: 2%;
-  margin-bottom: 2%;
+  margin-bottom: 0.2%;
+  box-shadow: none !important;
 
 }
 
