--- a/src/app/components/create-tests/create-tests.component.html
+++ b/src/app/components/create-tests/create-tests.component.html
@@ -54,9 +54,9 @@
   <div id="rightSide">
 
     <mat-tab-group id="tabGroup" animationDuration="0ms" mat-stretch-tabs>
-      <mat-tab label="Tasks">
+      <mat-tab class="tab" label="Tasks" >
 
-        <form class="container mt-3" (ngSubmit)="logValue()">
+        <form class="container mt-3" (ngSubmit)="logValue()" >
           <section *ngFor="let task of rawTasks; let i = index;" fxLayout="column">
             <div id="task">
               <div id="taskText">
@@ -90,7 +90,7 @@
 
         </form>
       </mat-tab>
-      <mat-tab label="Questionnaire">
+      <mat-tab label="Questionnaire" class="tab">
         <app-create-questionnaire></app-create-questionnaire>
       </mat-tab>
     </mat-tab-group>
