--- a/src/app/components/load-tests/load-tests.component.html
+++ b/src/app/components/load-tests/load-tests.component.html
@@ -1,1 +1,102 @@
-<p>load-tests works!</p>
+<div id="bodyWrapper">
+
+  <div id="leftSide">
+
+    <div id="toolbar">
+
+      <div id="import">
+
+        <mat-form-field id="inputUrl" appearance="standard" [style.fontSize.px]=18>
+
+          <label>
+
+            <input matInput type="url" id="urlInput" [(ngModel)]="urlToEmbed" placeholder="Test id" />
+
+          </label>
+
+        </mat-form-field>
+
+        <a id="buttonUrl" mat-flat-button color="primary" (click)="embedWebsite()"> Load a test </a>
+
+      </div>
+
+      <mat-form-field id="testTitle" appearance="standard" [style.fontSize.px]=18>
+
+        {{testTitle}}
+
+      </mat-form-field>
+
+      <div id="saveTestWrapper">
+        <a mat-flat-button color="accent" id="saveTest" (click)="submitTest()"> Save this test </a>
+      </div>
+
+
+      <!--      <a mat-flat-button color="accent" id="createQuestionnaire" routerLink="/createQuestionnaire" >-->
+      <!--        Create a questionnaire-->
+      <!--      </a>-->
+
+      <!--      <a mat-flat-button color="accent" id="createTest"> Create a test </a>-->
+
+      <!--      <a mat-flat-button color="accent" id="startScreenRecording" routerLink="/screenRecording"> -->
+      <!--        Start screen recording -->
+      <!--      </a>-->
+
+    </div>
+
+    <div id="websiteContainer">
+      <iframe id="websiteIframe"></iframe>
+
+    </div>
+
+  </div>
+
+
+  <div id="rightSide">
+
+    <mat-tab-group id="tabGroup" animationDuration="0ms" mat-stretch-tabs>
+      <mat-tab class="tab" label="Tasks" >
+
+        <form class="container mt-3" (ngSubmit)="logValue()" >
+          <section *ngFor="let task of rawTasks; let i = index;" fxLayout="column">
+            <div id="task">
+              <div id="taskText">
+                <mat-form-field id="inputName" appearance="standard" [style.fontSize.px]=14>
+                  <label>
+                    <input matInput type="text" [(ngModel)]="task.name" [name]="task.name + '_' + i" placeholder="Task name"/>
+                  </label>
+                </mat-form-field>
+
+                <mat-form-field id="inputDescription" appearance="standard" [style.fontSize.px]=14>
+                  <label>
+                    <textarea matInput type="text" [(ngModel)]="task.description" [name]="task.description + '_' + i" placeholder="Task description"></textarea>
+                  </label>
+                </mat-form-field>
+
+              </div>
+
+              <div id="removeTaskWrapper">
+                <a id="removeTaskButton" mat-mini-fab color="warn" (click)="removeTask(i)">
+                  <mat-icon>clear</mat-icon>
+                </a>
+              </div>
+
+            </div>
+
+          </section>
+
+          <a id="addTaskButton" mat-mini-fab color="primary" (click)="addTask()">
+            <mat-icon>add</mat-icon>
+          </a>
+
+        </form>
+      </mat-tab>
+      <mat-tab label="Questionnaire" class="tab">
+        <app-create-questionnaire></app-create-questionnaire>
+      </mat-tab>
+    </mat-tab-group>
+
+
+
+  </div>
+
+</div>
