--- a/src/app/components/doTest/do-test.component.html
+++ b/src/app/components/doTest/do-test.component.html
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  <button id="nextTaskButton" (click)="nextTask()">Next task</button>
+  <button #nextBtn id="nextTaskButton" (click)="nextTask()">Next task</button>
 </p>
 
 <p>
