--- a/src/app/components/recording-permission-view/recording-permission-view.component.html
+++ b/src/app/components/recording-permission-view/recording-permission-view.component.html
@@ -1,12 +1,12 @@
-<mat-card class="mat-card"> 
+<mat-card class="mat-card">
     <mat-card-header>
         <div mat-card-avatar class="header-icon"></div>
         <mat-card-title>Warning</mat-card-title>
     </mat-card-header>
     <mat-card-content class ="content-position">
         <p>
-          For next test, screen recording is needed.
-          Do you agreed?
+          For the next test, screen recording is required.
+          Do you allow it?
         </p>
       </mat-card-content>
     <mat-card-actions>
