--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,6 +24,12 @@
 
   </a>
 
+  <a class="button" mat-button routerLink="viewResultsOfTest" *ngIf="user && user.role == 'UXER'">
+
+    View test results
+
+  </a>
+
   <a class="button" mat-button routerLink="cardsorting/createTest" *ngIf="user && user.role == 'UXER'">
 
    Create a card sorting test
