--- a/src/app/components/create-questionnaire/create-questionnaire.component.css
+++ b/src/app/components/create-questionnaire/create-questionnaire.component.css
@@ -76,7 +76,26 @@
     margin-left: 20px;
 }
 
-.button {
 
+#buttonWrapper {
+
+  display: flex;
+  flex-direction:column;
+  justify-content: space-between;
+
+}
+
+.buttonRow {
+
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+
+.button {
+  flex: 1;
   margin: 5px;
 }
