Temporarily brought back a component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,11 +18,11 @@
 
   </a>
 
-<!--  <a class="button" mat-button routerLink="viewTests" *ngIf="user && user.role == 'UXER'">-->
+  <a class="button" mat-button routerLink="viewTests" *ngIf="user && user.role == 'UXER'">
 
-<!--    View your tests-->
+    View your tests
 
-<!--  </a>-->
+  </a>
 
   <a class="button" mat-button routerLink="viewResultsOfTest" *ngIf="user && user.role == 'UXER'">
 
